I added the welcome message

--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
   <head>
   </head>
   <body>
-    <h1>This is P3 class.</h1>
+    <h1>Welcome to Software Construction and Configuration.</h1>
+    <h2>This is P3 class.</h2>
   </body>
 </html>
