--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,6 @@
   </head>
   <body>
     <h1>Welcome to Software Construction and Configuration.</h1>
-    <h2>This is P3 class.</h2>
+    <h2>This is P3 Week4 class.</h2>
   </body>
 </html>
